<resources>
    <string name="app_name">Shilpa-Kala</string>
    <string name="welcome_message">Namaskara, Shilpi!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Login</string>
    
    <!-- Dashboard -->
    <string name="capture_product">Capture Product</string>
    <string name="upload_product">Upload Product</string>
    <string name="my_gallery">My Gallery</string>
    <string name="my_portfolio">Product Portfolio</string>
    <string name="recent_products">Recent Uploads</string>
    <string name="title_forgot_password">Reset Password</string>
    <string name="title_profile">Artisan Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_camera">Live Lens</string>
    <string name="title_preview">Product Branding</string>
    <string name="title_gallery">My Collection</string>
    <string name="title_craft_detail">Heritage Craft</string>
</resources>
